<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/detail_tv_descripcion"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/detail_imagen"
        app:layout_constraintStart_toStartOf="@+id/detail_imagen"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_descripcion2"
        tools:text="Descripcion" />

    <TextView
        android:id="@+id/detail_tv_descripcion2"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/detail_tv_descripcion"
        app:layout_constraintStart_toStartOf="@+id/detail_imagen"
        app:layout_constraintTop_toBottomOf="@+id/detail_imagen" />

    <TextView
        android:id="@+id/detal_tv_precio"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Precio"
        app:layout_constraintStart_toEndOf="@+id/detal_tv_precio2"
        app:layout_constraintTop_toTopOf="@+id/detal_tv_precio2" />

    <TextView
        android:id="@+id/detal_tv_precio2"
        style="@style/TextAppearance.Material3.TitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/detail_tv_precio"
        app:layout_constraintStart_toStartOf="@+id/detail_tv_descripcion"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_descripcion" />

    <Button
        android:id="@+id/btn_regresar"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_detail_btn_regresar"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detail_imagen"
        android:layout_width="360dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_regresar"
        app:srcCompat="@drawable/ic_baseline_cookie_50" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/detail_et_cantidad_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_detail_et_cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/detail_btn_agregar"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout6"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout6" />

</androidx.constraintlayout.widget.ConstraintLayout>