<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ordenes.OrdenesFragment">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_outdoor_grill_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/fragment_btn_entradas"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fragment_btn_entradas"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:id="@+id/fragment_ordenes_tv_chk_entradas"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_btn_entradas"
        app:layout_constraintStart_toEndOf="@+id/fragment_btn_entradas"
        app:layout_constraintTop_toTopOf="@+id/fragment_btn_entradas"
        tools:text="nada" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_food_bank_50"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/fragment_btn_platos"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fragment_btn_platos"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/fragment_ordenes_tv_chk_platos"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_btn_platos"
        app:layout_constraintEnd_toEndOf="@+id/fragment_ordenes_tv_chk_entradas"
        app:layout_constraintTop_toTopOf="@+id/fragment_btn_platos"
        tools:text="nada" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_cookie_50"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/fragment_btn_postres"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fragment_btn_postres"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/fragment_ordenes_tv_chk_postres"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_btn_postres"
        app:layout_constraintEnd_toEndOf="@+id/fragment_ordenes_tv_chk_platos"
        app:layout_constraintTop_toTopOf="@+id/fragment_btn_postres"
        tools:text="nada" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_emoji_food_beverage_50"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/fragment_btn_bebidas"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fragment_btn_bebidas"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/fragment_ordenes_tv_chk_bebidas"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_btn_bebidas"
        app:layout_constraintEnd_toEndOf="@+id/fragment_ordenes_tv_chk_postres"
        app:layout_constraintTop_toTopOf="@+id/fragment_btn_bebidas"
        tools:text="nada" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_tv_ordenar_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:helperText="@string/fragment_tv_ordenar_mesa_helper"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/fragment_btn_bebidas"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/fragment_ordenes_tv_chk_bebidas">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_et_ordenar_mesaNumero"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/fragment_btn_ordenar"
        app:layout_constraintEnd_toEndOf="@+id/fragment_ordenes_tv_chk_bebidas"
        app:layout_constraintStart_toStartOf="@+id/fragment_ordenes_tv_chk_bebidas"
        app:layout_constraintTop_toBottomOf="@+id/fragment_ordenes_tv_chk_bebidas" />

</androidx.constraintlayout.widget.ConstraintLayout>