<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cuenta.CuentaFragment">

    <TextView
        android:id="@+id/cuenta_tv_titulo_nombre"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/cuenta_tv_titulo_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cuenta_tv_titulo_cantidad"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/cuenta_tv_titulo_cantidad"
        app:layout_constraintBottom_toBottomOf="@+id/cuenta_tv_titulo_nombre"
        app:layout_constraintStart_toEndOf="@+id/cuenta_tv_titulo_nombre"
        app:layout_constraintTop_toTopOf="@+id/cuenta_tv_titulo_nombre" />

    <TextView
        android:id="@+id/cuenta_tv_titulo_precio"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/cuenta_tv_titulo_precio"
        app:layout_constraintBottom_toBottomOf="@+id/cuenta_tv_titulo_cantidad"
        app:layout_constraintStart_toEndOf="@+id/cuenta_tv_titulo_cantidad"
        app:layout_constraintTop_toTopOf="@+id/cuenta_tv_titulo_cantidad" />

    <TextView
        android:id="@+id/cuenta_tv_nombre"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/cuenta_tv_titulo_nombre"
        app:layout_constraintStart_toStartOf="@+id/cuenta_tv_titulo_nombre"
        app:layout_constraintTop_toBottomOf="@+id/cuenta_tv_titulo_nombre"
        tools:text="N. producto" />

    <TextView
        android:id="@+id/cuenta_tv_cantidad"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/cuenta_tv_titulo_cantidad"
        app:layout_constraintStart_toStartOf="@+id/cuenta_tv_titulo_cantidad"
        app:layout_constraintTop_toBottomOf="@+id/cuenta_tv_titulo_cantidad"
        tools:text="cantidad" />

    <TextView
        android:id="@+id/cuenta_tv_precio"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/cuenta_tv_titulo_precio"
        app:layout_constraintStart_toStartOf="@+id/cuenta_tv_titulo_precio"
        app:layout_constraintTop_toBottomOf="@+id/cuenta_tv_titulo_precio"
        tools:text="precio" />
</androidx.constraintlayout.widget.ConstraintLayout>